--- a/components/common.less
+++ b/components/common.less
@@ -129,8 +129,7 @@ div.emptyPortlet {
 }
 
 ul {
-	list-style-type: disc;
-	.list-style-image-svg('images/bullet-icon.svg', 'images/bullet-icon.png');
+	.list-style-image( 'images/bullet-icon.svg' );
 }
 
 pre,
