Hide "Jump to: navigation, search"
See https://github.com/dolfinus/DarkVector/issues/9

--- a/darkvector.less
+++ b/darkvector.less
@@ -1205,3 +1205,8 @@ div.darkvectorMenu li.selected a:visited {
 body.ltr #footer #footer-places {
     float: left
 }
+
+.mw-jump, #jump-to-nav {
+    overflow: hidden;
+    height: 0px
+}
