--- a/darkvector.less
+++ b/darkvector.less
@@ -40,6 +40,7 @@ pre,
 }
 
 .editOptions {
+    color: #a8a8a8;
     background-color: #333;
     border-color: #4c4c4c;
 }
@@ -127,7 +128,6 @@ textarea {
     background: #505050 none repeat scroll 0% 0% !important;
 }
 
-
 a,
 .mw-body a.external,
 .mw-body a.extiw,
@@ -138,7 +138,7 @@ a,
 a:visited,
 .mw-body a.external:visited,
 .mw-body a.extiw:visited {
-    color: #D28A0D;
+    color: #af9f84;
 }
 
 a.new,
@@ -160,7 +160,7 @@ div.thumbinner,
 div.toc,
 ul#filetoc,
 li.gallerybox div.thumb {
-    background-color: #4c4c4c;
+    background-color: #3d3d3d;
     border-color: #666
 }
 
@@ -219,6 +219,10 @@ table.wikitable>*>tr>th {
 .oo-ui-radioInputWidget input[type="radio"] + span,
 .rc-anchor-light {
     background: transparent !important;
+}
+
+.mw-warning-with-logexcerpt {
+    color: #a9a9a9
 }
 
 .mw-datatable th,
@@ -1210,3 +1214,38 @@ body.ltr #footer #footer-places {
     overflow: hidden;
     height: 0px
 }
+
+.tocnumber {
+list-style-type:inherit;
+background-color: transparent;
+border-color:#666;
+color:#af9f84
+}
+.toctogglelabel {
+    cursor: pointer;
+    color: #af9f84
+}
+.mw-changeslist-legend {
+     color: #a9a9a9;
+     background-color: #404040
+}
+ol.references li:target { 
+    background-color: #663300 
+}
+sup.reference:target { 
+    background-color: #663300 
+}
+.mw-editfont-monospace {
+    background-color: #393939
+}
+.diff.diff-contentalign-left {
+    background-color: #393939
+}
+.catlinks {
+    background-color: #393939
+}
+.mw-createacct-benefits-list p{
+    color: #c9c9c9
+}
+div#mw-panel div.portal div.body ul li a:visited{color:#af9f84}
+div#mw-panel div.portal div.body ul li a{color:#e69710}
