--- a/darkvector.less
+++ b/darkvector.less
@@ -1157,6 +1157,9 @@ div.darkvectorMenu li.selected a:visited {
 #mw-panel .portal.first .body {
     margin-left: .5em
 }
+.mw-prefs-buttons {
+    background-color: #706349 /*make background less glaring under buttons */
+}
 
 #footer {
     margin-left: 10em;
