--- a/darkvector.less
+++ b/darkvector.less
@@ -1158,7 +1158,7 @@ div.darkvectorMenu li.selected a:visited {
     margin-left: .5em
 }
 .mw-prefs-buttons {
-    background-color: #706349 /*make background less glaring under buttons */
+    background-color: #4a4a4a /*make background less glaring under buttons */
 }
 
 #footer {
