--- a/darkvector.less
+++ b/darkvector.less
@@ -138,7 +138,7 @@ a,
 a:visited,
 .mw-body a.external:visited,
 .mw-body a.extiw:visited {
-    color: #af9f84;
+    color: #db8200;
 }
 
 a.new,
@@ -1219,11 +1219,11 @@ body.ltr #footer #footer-places {
 list-style-type:inherit;
 background-color: transparent;
 border-color:#666;
-color:#af9f84
+color:#db8200
 }
 .toctogglelabel {
     cursor: pointer;
-    color: #af9f84
+    color: #db8200
 }
 .mw-changeslist-legend {
      color: #a9a9a9;
@@ -1247,5 +1247,5 @@ sup.reference:target {
 .mw-createacct-benefits-list p{
     color: #c9c9c9
 }
-div#mw-panel div.portal div.body ul li a:visited{color:#af9f84}
+div#mw-panel div.portal div.body ul li a:visited{color:#db8200}
 div#mw-panel div.portal div.body ul li a{color:#e69710}
