--- a/components/tabs.less
+++ b/components/tabs.less
@@ -158,7 +158,7 @@ div.darkvectorMenu h3 a {
 	right: 0;
 	width: 20px;
 	height: 2.5em;
-	.background-image-svg('images/arrow-down-icon.svg', 'images/arrow-down-icon.png');
+	background-image: url('images/arrow-down-icon.svg');
 	background-position: 100% 70%;
 	background-repeat: no-repeat;
 	.transition(background-position 250ms);
@@ -169,7 +169,7 @@ div.darkvectorMenu.menuForceShow h3 a {
 }
 
 div.darkvectorMenuFocus h3 a {
-	.background-image-svg('images/arrow-down-focus-icon.svg', 'images/arrow-down-focus-icon.png');
+	background-image: url('images/arrow-down-focus-icon.svg');
 }
 
 div.darkvectorMenu div.menu {
