--- a/darkvector.less
+++ b/darkvector.less
@@ -495,7 +495,7 @@ div.emptyPortlet {
 
 ul {
     list-style-type: disc;
-    list-style-image: url('images/bullet-icon.png')
+    list-style-image: url('images/bullet-icon.svg')
 }
 
 pre,
