--- a/components/search.less
+++ b/components/search.less
@@ -100,7 +100,7 @@ div#simpleSearch {
 		direction: ltr;
 		white-space: nowrap;
 		overflow: hidden;
-		background-image: url('images/search-ltr.svg');
+		background-image: url('images/search.svg');
 		background-position: center center;
 		background-repeat: no-repeat;
 	}
