Replace .background-image with background-image: url

--- a/components/navigation.less
+++ b/components/navigation.less
@@ -91,7 +91,7 @@ div#mw-panel {
 		direction: ltr;
 		background-position: top left;
 		background-repeat: no-repeat;
-		.background-image('images/portal-break.png');
+		background-image: url('images/portal-break.png');
 
 		h3 {
 			font-size: @menu-main-heading-font-size;
