--- a/darkvector.less
+++ b/darkvector.less
@@ -495,7 +495,7 @@ div.emptyPortlet {
 
 ul {
     list-style-type: disc;
-    list-style-image: url('images/bullet-icon.png')
+    list-style-image: url('images/bullet-icon.svg')
 }
 
 pre,
@@ -687,8 +687,8 @@ div#simpleSearch #mw-searchButton {
     white-space: nowrap;
     overflow: hidden;
     background-image: url('images/search-ltr.png');
-    background-image: -webkit-linear-gradient(transparent, transparent), url('images/search-ltr.svg');
-    background-image: linear-gradient(transparent, transparent), url('images/search-ltr.svg');
+    background-image: -webkit-linear-gradient(transparent, transparent), url('images/search.svg');
+    background-image: linear-gradient(transparent, transparent), url('images/search.svg');
     background-position: center center;
     background-repeat: no-repeat
 }
