Fix CodeEditor styles

--- a/darkvector.less
+++ b/darkvector.less
@@ -85,6 +85,40 @@ textarea {
     color: #c1c1c1;
 }
 
+.ace-tm,
+.ace-tm .ace_gutter,
+.ace-tm .ace_gutter-active-line,
+.codeEditor-status {
+    background-color: #4c4c4c !important;
+    color: #c1c1c1 !important;
+}
+
+.ace-tm .ace_print-margin {
+    background: none !important;
+}
+
+.ace-tm .ace_marker-layer .ace_selection {
+    background-color: #606060 !important;
+}
+
+.ace-tm,
+.ace-tm .ace_gutter,
+.ace-tm .ace_gutter-active-line {
+    border-color: #4c4c4c !important;
+}
+
+.codeEditor-status {
+    background-color: #4C4C4C !important;
+}
+
+.ace-tm .ace_constant {
+    color: #d44 !important;
+}
+
+.ace-tm .ace_cursor {
+    color: #333 !important;
+}
+
 .oo-ui-radioInputWidget input[type="radio"]:checked + span {
     background-image: linear-gradient(transparent, transparent), url('images/circle-constructive.png') !important;
     background-position: center center !important;
