Fix footer info color

--- a/darkvector.less
+++ b/darkvector.less
@@ -1253,7 +1253,7 @@ div.darkvectorMenu li.selected a:visited {
     padding: 0;
     padding-top: .5em;
     padding-bottom: .5em;
-    color: #333;
+    color: #7c7c7c !important;
     font-size: .7em
 }
 
