Fix search panel color

--- a/darkvector.less
+++ b/darkvector.less
@@ -128,11 +128,15 @@ textarea {
     background-color: #606060 !important;
 }
 
-.uls-menu .uls-search {
+.uls-menu .uls-search,
+.mw-search-profile-tabs {
     background-color: transparent !important;
+    background-image: none!important;
+}
+
+.uls-menu .uls-search {
     border-top-color: #e69710 !important;
     border-bottom-color: #e69710 !important;
-    background-image: none!important;
 }
 
 .uls-menu .uls-filtersuggestion {
