Fix RecentChanges page filter styles

--- a/darkvector.less
+++ b/darkvector.less
@@ -74,6 +74,39 @@ pre,
     background-color: #606060 !important;
     border-color: #4c4c4c !important;
 }
+
+.mw-rcfilters-ui-filterMenuHeaderWidget-header,
+.mw-rcfilters-ui-filterMenuSectionOptionWidget,
+.oo-ui-popupWidget-popup {
+    color: #a8a8a8 !important;
+    background-color: #606060 !important;
+    border-color: #4c4c4c !important;
+}
+
+.mw-rcfilters-ui-filterMenuHeaderWidget-title,
+.mw-rcfilters-ui-itemMenuOptionWidget-label-title,
+.mw-rcfilters-ui-itemMenuOptionWidget-label-desc,
+.mw-rcfilters-ui-datePopupWidget .mw-rcfilters-ui-valuePickerWidget-title,
+.mw-rcfilters-ui-filterTagMultiselectWidget-wrapper-content-title,
+.mw-rcfilters-ui-filterMenuSectionOptionWidget-header-title.oo-ui-labelElement-label,
+.mw-rcfilters-ui-menuSelectWidget-footer {
+    color: #ccc !important;
+}
+
+.mw-rcfilters-ui-filterMenuOptionWidget.oo-ui-flaggedElement-muted:not(.oo-ui-optionWidget-selected)
+{
+    color: #999 !important;
+}
+
+.mw-rcfilters-ui-filterMenuHeaderWidget-title,
+.mw-rcfilters-ui-filterTagMultiselectWidget-wrapper-content-title,
+.mw-rcfilters-ui-filterMenuSectionOptionWidget-header-title.oo-ui-labelElement-label,
+.mw-rcfilters-ui-menuSelectWidget-footer,
+.mw-rcfilters-ui-filterMenuOptionWidget.oo-ui-flaggedElement-muted:not(.oo-ui-optionWidget-selected)
+{
+    background-color: #606060 !important;
+}
+
 .oo-ui-tabSelectWidget-framed .oo-ui-tabOptionWidget.oo-ui-optionWidget-selected .oo-ui-labelElement-label {
     border-bottom-color: transparent !important;
 }
@@ -182,18 +215,16 @@ textarea {
     color: #fff !important;
 }
 
-.mw-mmv-options-dialog-header,
-.mw-rcfilters-ui-filterTagMultiselectWidget-wrapper-content-title {
+.mw-mmv-options-dialog-header {
     color: #ccc !important;
 }
-
 
 .mw-mmv-options-text-body {
     color: #999 !important;
 }
 
 .mw-mmv-dialog .mw-mmv-dialog-down-arrow,
-.oo-ui-tagItemWidget.oo-ui-widget-enabled  {
+.oo-ui-tagItemWidget.oo-ui-widget-enabled {
     background-color: #aaa !important;
 }
 
@@ -316,7 +347,7 @@ div#simpleSearch {
 .oo-ui-textInputWidget input,
 .oo-ui-textInputWidget textarea,
 .oo-ui-tagMultiselectWidget-handle,
-div#simpleSearch #searchInput {
+div#simpleSearch #searchInput{
     background-color: #4C4C4C !important;
     color: #C1C1C1 !important;
 }
@@ -1303,13 +1334,13 @@ color:#db8200
 }
 .mw-changeslist-legend {
     color: #a9a9a9;
-    background-color: #404040
+    background-color: #404040 !important;
 }
-ol.references li:target { 
-    background-color: #663300 
+ol.references li:target {
+    background-color: #663300
 }
-sup.reference:target { 
-    background-color: #663300 
+sup.reference:target {
+    background-color: #663300
 }
 .mw-editfont-monospace {
     background-color: #393939
