Fix new and visited links color

--- a/darkvector.less
+++ b/darkvector.less
@@ -232,22 +232,16 @@ textarea {
     background: #505050 none repeat scroll 0% 0% !important;
 }
 
-a,
-.mw-body a.external,
-.mw-body a.extiw,
-.uls-language-list a {
+a {
     color: #e69710 !important;
 }
 
-a:visited,
-.mw-body a.external:visited,
-.mw-body a.extiw:visited {
-    color: #db8200;
+a:visited {
+    color: #db8200 !important;
 }
 
-a.new,
-#p-personal a.new {
-    color: #d44
+a.new {
+    color: #d44 !important;
 }
 
 ul {
