Fix font color.

--- a/darkvector.less
+++ b/darkvector.less
@@ -687,7 +687,8 @@ body.darkvector-animateLayout #mw-head-base {
     margin-left: .75em;
     margin-top: .5em;
     font-size: .75em;
-    white-space: nowrap
+    white-space: nowrap;
+    color: #7c7c7c;
 }
 
 #pt-userpage,
@@ -1350,3 +1351,4 @@ sup.reference:target {
 }
 div#mw-panel div.portal div.body ul li a:visited{color:#db8200}
 div#mw-panel div.portal div.body ul li a{color:#e69710}
+div#mw-panel div.portal h3 {color:#7c7c7c}
