Made <pre> style more specific

--- a/darkvector.less
+++ b/darkvector.less
@@ -24,7 +24,13 @@ hr {
     color: #222;
 }
 
-pre,
+pre {
+    color: #ccc;
+    background-color: #4C4C4C;
+    border: none;
+}
+
+.CodeMirror,
 .mw-code,
 .wikiEditor-ui-toolbar {
     color: #ccc !important;
